--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "firebase": "^11.10.0",
     "framer-motion": "^12.19.2",
     "lucide-react": "^0.525.0",
     "react": "^18.2.0",
